--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
-  "background_color": "#ffffff",
+  "background_color": "#FF6300",
   "display": "standalone",
   "lang": "en",
-  "name": "bepet-app",
-  "short_name": "bepet-app",
+  "name": "Bepet",
+  "short_name": "Bepet",
   "start_url": "/?utm_source=web_app_manifest",
   "orientation": "portrait",
   "related_applications": [
+    {
+      "platform": "itunes",
+      "id": "com.matheussdev.bepetapp"
+    },
     {
       "platform": "play",
       "url": "http://play.google.com/store/apps/details?id=com.matheussdev.bepetapp",
